--- a/demos/style.css
+++ b/demos/style.css
@@ -4,6 +4,15 @@ html, body
 	padding: 0;
 }
 
+code
+{
+	background-color: #fefef3;
+	border: 1px solid #EEFFD2;
+	color: #333;
+	font-size: 13px;
+	padding: 0.5px 0.5em;
+}
+
 .cleaner
 {
 	clear: both;
@@ -43,6 +52,33 @@ html, body
 	color: #aaa;
 	float: right;
 	margin-right: 20px;
+}
+
+#programmatic_box
+{
+	padding: 20px;
+}
+
+#initialization_info
+{
+	border-bottom: 1px dotted #ccc;
+}
+
+ol.samples li
+{
+	border-bottom: 1px dotted #ddd;
+	margin-bottom: 10px;
+	padding: 5px;	
+}
+
+a.execute
+{
+	background-color: #c0c0c0;
+	border: 1px solid #EEFFD2;
+	color: #fff;
+	font-size: 13px;
+	padding: 0.5px 0.5em;
+	text-decoration: none;
 }
 
 #content
