--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -12,7 +12,7 @@
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>jQuery eTruncate plugin - {{ title }}</title>
+  <title>jQuery eTruncate plugin - {{ page.title }}</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -49,9 +49,9 @@
 	    </header>
 		<nav>
 			<ul>
-				<li><a href="index.php" {% if page.title == 'Home'%}class="active"{{ endif }}>Home</a></li>
-				<li><a href="demos.php" {% if page.title == 'Demos'%}class="active"{{ endif }}>Demos</a></li>
-				<li><a href="api.php" {% if page.title == 'Api'%}class="active"{{ endif }}>Api</a></li>
+				<li><a href="index.html" {% if page.title == 'Home'%}class="active"{% endif %}>Home</a></li>
+				<li><a href="demos.html" {% if page.title == 'Demos'%}class="active"{% endif %}>Demos</a></li>
+				<li><a href="api.html" {% if page.title == 'Api'%}class="active"{% endif %}>Api</a></li>
 				<li><a href="https://github.com/Oryzone/eTruncate/zipball/master">Download</a></li>
 				<li><a href="https://github.com/Oryzone/eTruncate">Github project</a></li>
 			</ul>
