--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -33,6 +33,9 @@
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="js/libs/modernizr-1.6.min.js"></script>
+  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
 
 </head>
 
@@ -68,14 +71,9 @@
 
 	  <!-- Javascript at the bottom for fast page loading -->
 
-	  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-	  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
-
 
 	  <!-- scripts concatenated and minified via ant build script-->
-	  <script src="js/plugins.js"></script>
-	  <script src="js/script.js"></script>
+	  <script type="text/javascript" src="https://github.com/Oryzone/eTruncate/raw/master/src/jquery.eTruncate.js"></script>
 	  <!-- end concatenated and minified scripts-->
 
 
@@ -83,11 +81,6 @@
 	    <script src="js/libs/dd_belatedpng.js"></script>
 	    <script> DD_belatedPNG.fix('img, .png_bg'); //fix any <img> or .png_bg background-images </script>
 	  <![endif]-->
-
-	  <!-- yui profiler and profileviewer - remove for production -->
-	  <script src="js/profiling/yahoo-profiling.min.js"></script>
-	  <script src="js/profiling/config.js"></script>
-	  <!-- end profiling code -->
 
 	</body>
 	</html>
