updated the stylesheets

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -13,8 +13,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>jQuery eTruncate plugin - {{ page.title }}</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="eTruncate is a jQuery plugin that easily allows you to hide/show some html elements like some paragraphs on long texts. It can be used as an easy way to improve user experience by hiding part of long unconfortable list elements and show them again with a click to provide more information only to those users who are really interested on reading your contents.">
+  <meta name="author" content="ORYZONE">
 
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
